--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>My Profile | Home </title>
+<title>My Profile | HOME </title>
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- jQuery (necessary JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
@@ -75,7 +75,7 @@ asdfasdfsdasdfasdfadfasd
 		 <div class="company">
 			 <h3 class="clr1">EXPERIENCE</h3>
 			 <div class="company_details">
-				 <h4>ECOFIN Global Consulting  <span>2006  - PRESENT</span></h4>
+				 <h4>ECOFIN GLOBAL CONSULTING  <span>2006  - PRESENT</span></h4>
 				 <h6>WEB DESIGNER</h6>
 				 <p class="cmpny1">ECOFIN Global Consulting is a global management consulting firm that works with leading businesses and assists them in improving corporate, financial and operational performance by acting as a facilitating agent. With a global presence and a network of highly experienced and dynamic consultants, ECOFIN helps in making businesses more valuable through high-impact solutions.</p>
 			 </div>
